--- a/eventHub/index.html
+++ b/eventHub/index.html
@@ -6,22 +6,36 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="flex">
+
+  <header>
     <h1>EventHub</h1>
-    <div>
+    <nav>
       <a href="#">Home</a> |
       <a href="#">Eventos</a> |
       <a href="#">Sobre</a> |
       <a href="#">Contato</a>
-    </div>
+    </nav>
   </header>
+
   <main>
-    <h2>Destaques</h2>
-    <p>Confira os principais eventos do mês!</p>
-    <img src="img/evento.jpg" alt="Imagem ilustrativa de evento">
+    <div class="container">
+      <div class="item">
+        <h2>Evento A</h2>
+        <p>Descrição do evento A</p>
+        <button id="botaoA">Inscrever-se</button>
+      </div>
+      <div class="item">
+        <h2>Evento B</h2>
+        <p>Descrição do evento B</p>
+        <button id="botaoB">Inscrever-se</button>
+      </div>
+    </div>
   </main>
+
   <footer>
     © 2025 EventHub. Todos os direitos reservados.
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
